[tool.poetry]
name = "gnu-elpa-mirror"
version = "0.1.0"
description = "Bypasses terrible package management decisions."
authors = ["Radian LLC <contact+gnu-elpa-mirror@radian.codes>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
PyGithub = "^1.55"
requests = "^2.32.4"
croniter = "^1.3.7"
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
