[tool.poetry]
name = "gnu-elpa-mirror"
version = "0.1.0"
description = "Bypasses terrible package management decisions."
authors = ["Radian LLC <contact+gnu-elpa-mirror@radian.codes>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
PyGithub = "^2.9.1"
requests = "^2.34.2"
croniter = "^6.2.2"
python-dotenv = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
